# cabalXMonad

./: LICENSE  cabalXMonad.cabal
src/: cabalXMonad.hs
